<resources>
    <string name="app_name">CF Buddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="recent_blogs">Recent Blogs</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_default_handle" translatable="false">aviaryan</string>
    <string name="pref_title_handle">Codeforces username</string>
    <string name="pref_title_challenges">Receive daily challenges</string>
    <string name="pref_description_challenges">Receive Codeforces Problem of the day notifications</string>
    <string name="ua_label_handle">Handle</string>
    <string name="ua_label_fullname">Full Name</string>
    <string name="ua_label_rating">Rating</string>
    <string name="ua_label_max_rating">Max Rating</string>
    <string name="ua_label_org">Organization</string>
    <string name="action_share">Share</string>
    <string name="ua_label_country">Country</string>
    <string name="action_find_user">Find User</string>
    <string name="user_search_hint">Codeforces handle</string>
    <string name="search_label">Search Codeforces User</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_contests">Contests</string>
    <string name="contest_open_msg">Contest url copied</string>
    <string name="contest_label_open">OPEN</string>
    <string name="about_app_name" translatable="false">CF Buddy v1.0.0</string>
    <string name="about_author">Made by Avi Aryan</string>
    <string name="title_about">About</string>
    <string name="ua_label_city">City</string>
    <string name="drawer_profile">Profile</string>
    <string name="label_problems">Problems</string>
    <string name="label_contests">Contests</string>
    <string name="label_recent_blogs">Recent Blogs</string>
    <string name="label_find_user">Find user</string>
    <string name="label_about">About</string>
    <string name="title_problems">Problems</string>
    <string name="label_problem_details">Problem Details</string>
    <string name="action_filter_problem">Filter Problems</string>
    <string name="search_problem_label">Filter Problems</string>
    <string name="problem_search_hint">dp;762</string>
    <string name="msg_no_user">User does not exist</string>
    <string name="msg_server_400_error">Object does not exist on the server</string>
    <string name="label_contest_url">Contest url</string>
    <string name="text_loading">Loading …</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="cd_blog_text">Blog text</string>
    <string name="cd_problem_text">Problem text</string>
    <string name="cd_contest_duration">Contest duration</string>
    <string name="cd_problem_tags">Problem tags</string>
    <string name="cd_problem_solved_count">Problem solved count</string>
    <string name="cd_blog_author">Blog author</string>
    <string name="cd_cf_handle">User\'s Codeforces handle</string>
    <string name="widget_wait_msg">Please wait. Loading data</string>
    <string name="text_blog_time">Blog time</string>
</resources>
