<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_accent_24px"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_problems"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/label_problems" />
        <item
            android:id="@+id/nav_contests"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/label_contests" />
        <item
            android:id="@+id/nav_blogs"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/label_recent_blogs" />
        <item
            android:id="@+id/nav_find_user"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/label_find_user" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/label_about" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
