<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ua_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="in.aviaryan.cfbuddy.ui.UserActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ua_appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        app:elevation="-4dp">
        <!-- app bar negative elevation a/c material specs -->

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:id="@+id/ua_col_toolbar"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- appCompatImageView automatically used (see source) -->
            <ImageView
                android:id="@+id/ua_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@mipmap/ic_launcher"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/user_profile_image"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/ua_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <!-- app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways" -->

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/ua_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/userProperty">
                <TextView
                    android:id="@+id/ua_handle"
                    style="@style/userData"
                    tools:text="aviaryan" />
                <TextView
                    style="@style/userValue"
                    android:text="@string/ua_label_handle" />
            </LinearLayout>

            <LinearLayout style="@style/userProperty">
                <TextView
                    android:id="@+id/ua_fullname"
                    style="@style/userData"
                    tools:text="Avi Aryan" />
                <TextView
                    style="@style/userValue"
                    android:text="@string/ua_label_fullname" />
            </LinearLayout>

            <LinearLayout style="@style/userProperty">
                <TextView
                    android:id="@+id/ua_rating"
                    style="@style/userData"
                    tools:text="Expert (1617)" />
                <TextView
                    style="@style/userValue"
                    android:text="@string/ua_label_rating" />
            </LinearLayout>

            <LinearLayout style="@style/userProperty">
                <TextView
                    android:id="@+id/ua_max_rating"
                    style="@style/userData"
                    tools:text="Candidate Master (1920)" />
                <TextView
                    style="@style/userValue"
                    android:text="@string/ua_label_max_rating" />
            </LinearLayout>

            <LinearLayout style="@style/userProperty">
                <TextView
                    android:id="@+id/ua_org"
                    style="@style/userData"
                    tools:text="IIIT Vadodara" />
                <TextView
                    style="@style/userValue"
                    android:text="@string/ua_label_org" />
            </LinearLayout>

            <LinearLayout style="@style/userProperty">
                <TextView
                    android:id="@+id/ua_city"
                    style="@style/userData"
                    tools:text="Gandhinagar" />
                <TextView
                    style="@style/userValue"
                    android:text="@string/ua_label_city" />
            </LinearLayout>

            <LinearLayout style="@style/userProperty">
                <TextView
                    android:id="@+id/ua_country"
                    style="@style/userData"
                    tools:text="India" />
                <TextView
                    style="@style/userValue"
                    android:text="@string/ua_label_country" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ua_share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_menu_share"
        android:contentDescription="@string/action_share" />


</android.support.design.widget.CoordinatorLayout>
