<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heading">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="22sp"
                android:padding="10dp"
                android:id="@+id/widget_title"
                android:textColor="#C0FFFFFF"
                android:contentDescription="@string/label_recent_blogs"/>
        </LinearLayout>

        <ListView
            android:id="@+id/widgetCollectionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">
        </ListView>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/widget_wait_msg"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>